# c-facedetec

./: CMakeLists.txt  facedetect.cpp
